configurable path for server certificate and key and output dir

--- a/README
+++ b/README
@@ -5,16 +5,15 @@ It autogenerates keys and configuration files.
 
 It creates a directory with all keys and config files and a tar.gz file for easy copying to your client machine.
 
-INSTALLATION:
-copy your server's ca.key and ca.crt files to server_keys directory
-
 CONFIGURATION:
 edit php-ca.php file especially set variables:
 $commonName - this is the common name of you new user
 $networkName - the openvpn config file will be generated with this name
 $openVPNServer - the server that hosts your openvnp network
 $openVPNPort - the port used by openvpn
-
+$serverCertPath - the path of the ca.crt file
+$serverKeyPath - the path of the ca.key file
+$outputDir - the directory where generated files will be stored
 
 make sure you have writting permissions in the directory where the script is executed.
 
